fixed logo cutoff  issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,7 @@ nav div {
 #monogram {
     width: 4rem;
     height: 4rem;
+    overflow: visible;
 }
 
 .nav-item {
